syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.data.rpc";
option java_outer_classname = "ScopeProto";

import "google/protobuf/timestamp.proto";
import "metadata.proto";


service Scopes {
  rpc CreateScope (ScopeCreateRequest) returns (Scope) {};
  rpc ListScopes (ScopeListRequest) returns (ScopesListResponse) {};
  rpc DeleteScope (ScopeDeleteRequest) returns (Scope) {};
  rpc GetScope (ScopeGetRequest) returns (Scope) {};
}

message ScopeCreateRequest {
  string authorizationServerId = 1;
  string name = 2;
  Metadata metadata = 3;
}

message ScopeListRequest {
  repeated string authorizationServerIds = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ScopeDeleteRequest {
  string id = 1;
}

message Scope {
  string id = 1;
  string authorizationServerId = 2;
  string name = 3;
  Metadata metadata = 4;
  google.protobuf.Timestamp createdOn = 5;
  google.protobuf.Timestamp updatedOn = 6;
}

message ScopesListResponse {
  repeated Scope scopes = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ScopeGetRequest {
  string id = 1;
}